--- a/src/pages/canvas/canvas.css
+++ b/src/pages/canvas/canvas.css
@@ -1,28 +1,59 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f2f2f2;
-  }
-  
-  canvas {
-    border: 1px solid #000;
-  }
-  
-  button {
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-  }
+:root {
+  --background-color: #222222;
+  --text-color: #ffffff;
+  --secondary-text-color: #cccccc;
+  --primary-button-color: #007bff;
+  --secondary-button-color: #4a4a4a;
+  --highlight-color: #ffcc00;
+  --link-color: #00b3e6;
+  --border-color: #333333;
+  --box-background-color: #333333;
+  --secondary-box-background-color: #444444;
+}
 
-  .imageEditorContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
+body {
+    height: 100vh;
+    max-width: 1920px;
+    margin: 0;
+    background-color: var(--background-color);
+}
+  
+canvas {
+  border: 1px solid var(--secondary-text-color);
+}
+
+h1, h2, h3 {
+  color: var(--text-color);
+}
+
+p {
+  color: var(--secondary-text-color);
+}
+
+button {
+  background-color: var(--primary-button-color);
+  color: var(--text-color);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.imageEditorContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;  
+}
+
+.rewindContainer {
+  background-color: var(--border-color);
+  padding: 1rem 2.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
