creating a new home page

--- a/src/pages/canvas/canvas.css
+++ b/src/pages/canvas/canvas.css
@@ -12,10 +12,11 @@
 }
 
 body {
-    min-height: 100vh;
-    max-width: 1920px;
-    margin: 0;
-    background-color: var(--background-color);
+  font-family: 'Poppins', sans-serif;
+  min-height: 100vh;
+  max-width: 1920px;
+  margin: 0;
+  background-color: var(--background-color);
 }
   
 canvas {
