--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -1,8 +1,14 @@
+body {
+  background-color: #333333;
+  color: white;
+}
+
 .container {
 	width: 1280px;
 	max-width: 100%;
 	padding: 0px 3%;
 	margin: 0 auto;
+  height: 100dvh;
 }
 
 .custom-file-upload {
@@ -16,7 +22,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+}
+
+.image-upload-container form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+input[type=file]::file-selector-button {
+  border: 2px solid #6c5ce7;
+  padding: .2em .4em;
+  border-radius: .2em;
+  background-color: #a29bfe;
+  transition: 1s;
+}
+
+input[type=file]::file-selector-button:hover {
+  background-color: #81ecec;
+  border: 2px solid #00cec9;
+}
+
+button {
+  background-color: #007bff;
+  color: var(--text-color);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-top: 20px;
 }
